--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="box">
             <h2>Mario Games</h2>
             <ul class="button-list">
-                <li><a href="folder/mario1" class="button">Mario Game 1</a></li>
+                <li><a href="folder/mario1" class="button">New Super Mario DS</a></li>
                 <li><a href="folder/mario2" class="button">Mario Game 2</a></li>
                 <li><a href="folder/mario3" class="button">Mario Game 3</a></li>
                 <li><a href="folder/mario4" class="button">Mario Game 4</a></li>
