--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
         <div class="box">
             <h2>Mario Games</h2>
             <ul class="button-list">
-                <li><a href="folder/mario1" class="button">SuperMarioWorld</a></li>
-                <li><a href="folder/mario2" class="button">Mario Game 2</a></li>
-                <li><a href="folder/mario3" class="button">Mario Game 3</a></li>
-                <li><a href="folder/mario4" class="button">Mario Game 4</a></li>
-                <li><a href="folder/mario5" class="button">Mario Game 5</a></li>
-                <li><a href="folder/mario6" class="button">Mario Game 6</a></li>
-                <li><a href="folder/mario7" class="button">Mario Game 7</a></li>
-                <li><a href="folder/mario8" class="button">Mario Game 8</a></li>
-                <li><a href="folder/mario9" class="button">Mario Game 9</a></li>
-                <li><a href="folder/mario10" class="button">Mario Game 10</a></li>
+                <li><a href="/mario1" class="button">SuperMarioWorld</a></li>
+                <li><a href="mario2" class="button">Mario Game 2</a></li>
+                <li><a href="mario3" class="button">Mario Game 3</a></li>
+                <li><a href="mario4" class="button">Mario Game 4</a></li>
+                <li><a href="mario5" class="button">Mario Game 5</a></li>
+                <li><a href="mario6" class="button">Mario Game 6</a></li>
+                <li><a href="mario7" class="button">Mario Game 7</a></li>
+                <li><a href="mario8" class="button">Mario Game 8</a></li>
+                <li><a href="mario9" class="button">Mario Game 9</a></li>
+                <li><a href="mario10" class="button">Mario Game 10</a></li>
             </ul>
         </div>
 
@@ -82,7 +82,7 @@
         <div class="box">
             <h2>Pokemon Games</h2>
             <ul class="button-list">
-                <li><a href="folder/pokemon1" class="button">Pokemon Game 1</a></li>
+                <li><a href="pokemon1" class="button">Pokemon Game 1</a></li>
                 <li><a href="folder/pokemon2" class="button">Pokemon Game 2</a></li>
                 <li><a href="folder/pokemon3" class="button">Pokemon Game 3</a></li>
                 <li><a href="folder/pokemon4" class="button">Pokemon Game 4</a></li>
