--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="box">
             <h2>Pokemon Games</h2>
             <ul class="button-list">
-                <li><a href="Pokemon1" class="button">Pokemon Game 1</a></li>
+                <li><a href="Pokemon1" class="button">Pokemon Emerald</a></li>
                 <li><a href="folder/pokemon2" class="button">Pokemon Game 2</a></li>
                 <li><a href="folder/pokemon3" class="button">Pokemon Game 3</a></li>
                 <li><a href="folder/pokemon4" class="button">Pokemon Game 4</a></li>
