--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #e0e0e0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,7 +21,7 @@
         }
 
         .box {
-            background-color: #fff;
+            background-color: #d0d0d0;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             padding: 20px;
@@ -31,6 +31,7 @@
 
         .box h2 {
             margin-bottom: 20px;
+            color: #555;
         }
 
         .button-list {
@@ -43,9 +44,9 @@
         }
 
         .button {
-            display: inline-block;
+            display: block;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: #888;
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
@@ -55,7 +56,7 @@
         }
 
         .button:hover {
-            background-color: #0056b3;
+            background-color: #666;
         }
     </style>
 </head>
@@ -65,7 +66,7 @@
         <div class="box">
             <h2>Mario Games</h2>
             <ul class="button-list">
-                <li><a href="/mario1" class="button">SuperMarioWorld</a></li>
+                <li><a href="mario1" class="button">SuperMarioWorld</a></li>
                 <li><a href="mario2" class="button">Mario Game 2</a></li>
                 <li><a href="mario3" class="button">Mario Game 3</a></li>
                 <li><a href="mario4" class="button">Mario Game 4</a></li>
@@ -83,15 +84,15 @@
             <h2>Pokemon Games</h2>
             <ul class="button-list">
                 <li><a href="Pokemon1" class="button">Pokemon Emerald</a></li>
-                <li><a href="folder/pokemon2" class="button">Pokemon Game 2</a></li>
-                <li><a href="folder/pokemon3" class="button">Pokemon Game 3</a></li>
-                <li><a href="folder/pokemon4" class="button">Pokemon Game 4</a></li>
-                <li><a href="folder/pokemon5" class="button">Pokemon Game 5</a></li>
-                <li><a href="folder/pokemon6" class="button">Pokemon Game 6</a></li>
-                <li><a href="folder/pokemon7" class="button">Pokemon Game 7</a></li>
-                <li><a href="folder/pokemon8" class="button">Pokemon Game 8</a></li>
-                <li><a href="folder/pokemon9" class="button">Pokemon Game 9</a></li>
-                <li><a href="folder/pokemon10" class="button">Pokemon Game 10</a></li>
+                <li><a href="pokemon2" class="button">Pokemon Game 2</a></li>
+                <li><a href="pokemon3" class="button">Pokemon Game 3</a></li>
+                <li><a href="pokemon4" class="button">Pokemon Game 4</a></li>
+                <li><a href="pokemon5" class="button">Pokemon Game 5</a></li>
+                <li><a href="pokemon6" class="button">Pokemon Game 6</a></li>
+                <li><a href="pokemon7" class="button">Pokemon Game 7</a></li>
+                <li><a href="pokemon8" class="button">Pokemon Game 8</a></li>
+                <li><a href="pokemon9" class="button">Pokemon Game 9</a></li>
+                <li><a href="pokemon10" class="button">Pokemon Game 10</a></li>
             </ul>
         </div>
     </div>
