--- a/index.html
+++ b/index.html
@@ -69,13 +69,8 @@
                 <li><a href="mario1" class="button">SuperMarioWorld</a></li>
                 <li><a href="mario2" class="button">SuperMarioBros 3</a></li>
                 <li><a href="mario3" class="button">SuperMarioBros </a></li>
-                <li><a href="mario4" class="button">Mario Game 4</a></li>
-                <li><a href="mario5" class="button">Mario Game 5</a></li>
-                <li><a href="mario6" class="button">Mario Game 6</a></li>
-                <li><a href="mario7" class="button">Mario Game 7</a></li>
-                <li><a href="mario8" class="button">Mario Game 8</a></li>
-                <li><a href="mario9" class="button">Mario Game 9</a></li>
-                <li><a href="mario10" class="button">Mario Game 10</a></li>
+                <li><a href="mario4" class="button">SuperMarioBros 2</a></li>
+                <li><a href="mario5" class="button">SuperMario All Stars</a></li>
             </ul>
         </div>
 
@@ -84,15 +79,10 @@
             <h2>Pokemon Games</h2>
             <ul class="button-list">
                 <li><a href="Pokemon1" class="button">Pokemon Emerald</a></li>
-                <li><a href="pokemon2" class="button">Pokemon Game 2</a></li>
-                <li><a href="pokemon3" class="button">Pokemon Game 3</a></li>
-                <li><a href="pokemon4" class="button">Pokemon Game 4</a></li>
-                <li><a href="pokemon5" class="button">Pokemon Game 5</a></li>
-                <li><a href="pokemon6" class="button">Pokemon Game 6</a></li>
-                <li><a href="pokemon7" class="button">Pokemon Game 7</a></li>
-                <li><a href="pokemon8" class="button">Pokemon Game 8</a></li>
-                <li><a href="pokemon9" class="button">Pokemon Game 9</a></li>
-                <li><a href="pokemon10" class="button">Pokemon Game 10</a></li>
+                <li><a href="pokemon2" class="button">Pokemon Ruby</a></li>
+                <li><a href="pokemon3" class="button">Pokemon Fire Red</a></li>
+                <li><a href="pokemon4" class="button">Pokemon Ultra Violet</a></li>
+                <li><a href="pokemon5" class="button">Pokemon Leaf Green/a></li>
             </ul>
         </div>
     </div>
