--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Categories</title>
+    <title>MarioAndPokemon</title>
+<header><h1>Sorry for the repeating games, I didn't feel like formating it for 5 games on each thing</h1></header>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,6 +72,11 @@
                 <li><a href="mario3" class="button">SuperMarioBros </a></li>
                 <li><a href="mario4" class="button">SuperMarioBros 2</a></li>
                 <li><a href="mario5" class="button">SuperMario All Stars</a></li>
+                <li><a href="mario1" class="button">SuperMarioWorld</a></li>
+                <li><a href="mario2" class="button">SuperMarioBros 3</a></li>
+                <li><a href="mario3" class="button">SuperMarioBros </a></li>
+                <li><a href="mario4" class="button">SuperMarioBros 2</a></li>
+                <li><a href="mario5" class="button">SuperMario All Stars</a></li>
             </ul>
         </div>
 
@@ -78,6 +84,11 @@
         <div class="box">
             <h2>Pokemon Games</h2>
             <ul class="button-list">
+                <li><a href="Pokemon1" class="button">Pokemon Emerald</a></li>
+                <li><a href="pokemon2" class="button">Pokemon Ruby</a></li>
+                <li><a href="pokemon3" class="button">Pokemon Fire Red</a></li>
+                <li><a href="pokemon4" class="button">Pokemon Ultra Violet</a></li>
+                <li><a href="pokemon5" class="button">Pokemon Leaf Green/a></li>
                 <li><a href="Pokemon1" class="button">Pokemon Emerald</a></li>
                 <li><a href="pokemon2" class="button">Pokemon Ruby</a></li>
                 <li><a href="pokemon3" class="button">Pokemon Fire Red</a></li>
